--- a/DisableNvidiaTelemetry/App.xaml
+++ b/DisableNvidiaTelemetry/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="DisableNvidiaTelemetryWPF.App"
+﻿<Application x:Class="DisableNvidiaTelemetry.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DisableNvidiaTelemetryWPF"
+             xmlns:local="clr-namespace:DisableNvidiaTelemetry"
              Startup="App_OnStartup">
 
     <Application.Resources>
@@ -65,11 +65,31 @@
             <Setter Property="Margin" Value="0,0,0,0" />
         </Style>
 
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#6BA504" />
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF5593FF" />
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#6BA504" />
+        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFBCBCBC" />
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#6BA504" />
+        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#6BA504" />
         <Style TargetType="{x:Type Button}">
             <Setter Property="Background" Value="#76B900" />
             <Setter Property="Foreground" Value="#FFFFFF" />
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="Padding" Value="10" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="Black" BorderThickness="1">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#5E9100" />
+                </Trigger>
+            </Style.Triggers>
         </Style>
 
         <Style TargetType="{x:Type Label}">
@@ -211,7 +231,7 @@
             <Setter Property="BorderThickness" Value="0.0, 0, 0, 0" />
             <Setter Property="Padding" Value="0" />
             <Setter Property="Margin" Value="0" />
-            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Background" Value="#242424" />
         </Style>
 
         <Style TargetType="{x:Type TabItem}">
@@ -382,44 +402,6 @@
         </Style>
 
         <!-- End CheckBox -->
-
-
-        <ControlTemplate x:Key="ButtonBaseControlTemplate" TargetType="{x:Type ButtonBase}">
-            <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}"
-                    BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}"
-                    SnapsToDevicePixels="True">
-                <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}"
-                                  Content="{TemplateBinding Content}"
-                                  ContentStringFormat="{TemplateBinding ContentStringFormat}" Focusable="False"
-                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                  Margin="{TemplateBinding Padding}" RecognizesAccessKey="True"
-                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-            </Border>
-            <ControlTemplate.Triggers>
-                <Trigger Property="Button.IsDefaulted" Value="True">
-                    <Setter Property="BorderBrush" TargetName="border"
-                            Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
-                </Trigger>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" TargetName="border" Value="#5D8C00" />
-                    <Setter Property="BorderBrush" TargetName="border" Value="#FF3C7FB1" />
-                </Trigger>
-                <Trigger Property="IsPressed" Value="True">
-                    <Setter Property="Background" TargetName="border" Value="#76B900" />
-                    <Setter Property="BorderBrush" TargetName="border" Value="#FF2C628B" />
-                </Trigger>
-                <Trigger Property="ToggleButton.IsChecked" Value="True">
-                    <Setter Property="Background" TargetName="border" Value="#5D8C00" />
-                    <Setter Property="BorderBrush" TargetName="border" Value="#FF245A83" />
-                </Trigger>
-                <Trigger Property="IsEnabled" Value="False">
-                    <Setter Property="Background" TargetName="border" Value="#76B900" />
-                    <Setter Property="BorderBrush" TargetName="border" Value="#FFADB2B5" />
-                    <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="#FF838383" />
-                </Trigger>
-            </ControlTemplate.Triggers>
-        </ControlTemplate>
 
 
         <ControlTemplate x:Key="CustomProgressBar" TargetType="{x:Type ProgressBar}">
@@ -630,6 +612,7 @@
         <SolidColorBrush x:Key="CheckedBackgroundColor" Color="#76B900" />
         <SolidColorBrush x:Key="UncheckedBackgroundColor" Color="#FF939393" />
         <Style x:Key="SwitchCheckBox" TargetType="{x:Type CheckBox}">
+            <Setter Property="Cursor" Value="Hand" />
             <Setter Property="Foreground" Value="#C2C2C2" />
             <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" />
             <Setter Property="Template">
