--- a/DisableNvidiaTelemetry/MainWindow.xaml
+++ b/DisableNvidiaTelemetry/MainWindow.xaml
@@ -1,16 +1,17 @@
-﻿<Window x:Class="DisableNvidiaTelemetryWPF.MainWindow"
+﻿<Window x:Class="DisableNvidiaTelemetry.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DisableNvidiaTelemetryWPF"
-        xmlns:properties="clr-namespace:DisableNvidiaTelemetryWPF.Properties"
+        xmlns:properties="clr-namespace:DisableNvidiaTelemetry.Properties"
         xmlns:fa5="http://schemas.fontawesome.com/icons/"
-        xmlns:controls="clr-namespace:DisableNvidiaTelemetryWPF"
-        xmlns:view="clr-namespace:DisableNvidiaTelemetryWPF.View"
+        xmlns:view="clr-namespace:DisableNvidiaTelemetry.View"
 
         mc:Ignorable="d"
-        Title="Disable Nvidia Telemetry" Height="500" Width="800" ResizeMode="NoResize"
+        Title="Disable Nvidia Telemetry"
+        MinHeight="355"
+        MinWidth="800"
+        Height="500" Width="800" ResizeMode="CanResize"
         Icon="Resources/binoculars-256.png" Loaded="MainWindow_OnLoaded" WindowStartupLocation="CenterScreen">
 
 
@@ -25,8 +26,11 @@
 
 
     <Grid>
-
-        <TabControl Margin="-2" Name="tabControl" TabStripPlacement="Left" VerticalAlignment="Stretch"
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <TabControl Grid.Row="0" Margin="-2" Name="tabControl" TabStripPlacement="Left" VerticalAlignment="Stretch"
                     HorizontalAlignment="Stretch">
 
             <TabItem>
@@ -75,30 +79,30 @@
                     </DataTemplate>
                 </TabItem.HeaderTemplate>
 
-                <Grid Name="tabTelemetry"  Style="{StaticResource GrayHoneycomb}">
+                <Grid Name="tabTelemetry">
+                    <ScrollViewer VerticalScrollBarVisibility="Auto">
+                        <StackPanel Orientation="Vertical" Margin="0, 5, 0, 0">
 
-                    <StackPanel Margin="0, 0, 0, 10" Orientation="Vertical" CanVerticallyScroll="True">
+                            <view:TelemetryControl x:Name="tcServices"
+                                                   Text="{x:Static properties:Resources.Telemetry_services}"
+                                                   TelemetryModified="TcServices_TelemetryModified"
+                                                   RefreshClicked="tcServices_RefreshClicked"
+                                                   DefaultClicked="tcServices_DefaultClicked" />
 
-                        <view:TelemetryControl x:Name="tcServices"
-                                               Text="{x:Static properties:Resources.Telemetry_services}"
-                                               OnTelemetryModified="TcServices_OnOnTelemetryModified" />
+                            <view:TelemetryControl x:Name="tcTasks"
+                                                   Text="{x:Static properties:Resources.Telemetry_tasks}"
+                                                   TelemetryModified="TcTasks_TelemetryModified"
+                                                   RefreshClicked="tcTasks_RefreshClicked"
+                                                   DefaultClicked="tcTasks_DefaultClicked" />
 
-                        <view:TelemetryControl x:Name="tcTasks" Text="{x:Static properties:Resources.Telemetry_tasks}"
-                                               OnTelemetryModified="TcTasks_OnOnTelemetryModified" />
+                            <view:TelemetryControl x:Name="tcRegistry"
+                                                   Text="{x:Static properties:Resources.Telemetry_registry_items}"
+                                                   TelemetryModified="TcRegistry_TelemetryModified"
+                                                   RefreshClicked="tcRegistry_RefreshClicked"
+                                                   DefaultClicked="tcRegistry_DefaultClicked" />
 
-                        <view:TelemetryControl x:Name="tcRegistry"
-                                               Text="{x:Static properties:Resources.Telemetry_registry_items}"
-                                               OnTelemetryModified="TcRegistry_OnOnTelemetryModified" />
-
-                    </StackPanel>
-
-                    <Button Name="BtnRefresh" Content="Refresh" HorizontalAlignment="Left" Margin="15,0,0,15"
-                            VerticalAlignment="Bottom" Width="75" Click="btnRefresh_Click"
-                            Template="{DynamicResource ButtonBaseControlTemplate}" />
-                    <Button Name="BtnRestoreDefaults" Content="Restore Defaults" HorizontalAlignment="Left"
-                            Margin="100,0,0,15" VerticalAlignment="Bottom" Width="122" Click="btnRestoreDefaults_Click"
-                            Template="{DynamicResource ButtonBaseControlTemplate}" />
-
+                        </StackPanel>
+                    </ScrollViewer>
                 </Grid>
             </TabItem>
 
@@ -147,7 +151,7 @@
                     </DataTemplate>
                 </TabItem.HeaderTemplate>
 
-                <Grid Style="{StaticResource GrayHoneycomb}">
+                <Grid>
 
                     <Button Name="btnUpdatecheck" Content="Check for Updates" HorizontalAlignment="Left"
                             Margin="10,161,0,0"
@@ -292,7 +296,7 @@
                     </DataTemplate>
                 </TabItem.HeaderTemplate>
 
-                <Grid Style="{StaticResource DarkHoneycomb}">
+                <Grid>
 
                     <Grid Style="{StaticResource GrayHoneycomb}" VerticalAlignment="Top" Height="166">
                         <Image HorizontalAlignment="Left" Height="100" Margin="10,10,0,0" VerticalAlignment="Top"
@@ -339,11 +343,11 @@
 
                     <TextBlock TextWrapping="WrapWithOverflow"
                                Text="{x:Static properties:Resources.ApplicationLicense}" HorizontalAlignment="Stretch"
-                               Margin="10,175,10,118" Foreground="#C2C2C2" />
+                               Margin="10,175,10,0" Foreground="#C2C2C2" />
 
                     <TextBlock TextWrapping="WrapWithOverflow"
                                Text="{x:Static properties:Resources.ApplicationCredits}" HorizontalAlignment="Stretch"
-                               Margin="10,287,10,130" Foreground="#C2C2C2" />
+                               Margin="10,265,10,0" Foreground="#C2C2C2" />
 
                     <Button Height="26" Click="btnDonate_Click" HorizontalAlignment="Left" VerticalAlignment="Top"
                             Margin="140,117,0,0">
