--- a/DisableNvidiaTelemetry/App.xaml
+++ b/DisableNvidiaTelemetry/App.xaml
@@ -2,9 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DisableNvidiaTelemetry"
+             xmlns:wpfCustomMessageBox="clr-namespace:WPFCustomMessageBox;assembly=WPFCustomMessageBox"
              Startup="App_OnStartup">
 
     <Application.Resources>
+
+        <Style TargetType="Window" x:Key="CustomMessageBoxStyle">
+            <Setter Property="Background" Value="#242424" />
+            <Setter Property="Foreground" Value="#FFFFFF" />
+        </Style>
 
 
         <Style TargetType="{x:Type Grid}" x:Key="GrayHoneycomb">
@@ -315,6 +321,7 @@
             <Setter Property="BorderBrush" Value="{StaticResource OptionMark.Static.Border}" />
             <Setter Property="Foreground" Value="#CCCCCC" />
             <Setter Property="BorderThickness" Value="2" />
+            <Setter Property="FontSize" Value="13" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type CheckBox}">
@@ -613,6 +620,7 @@
         <SolidColorBrush x:Key="UncheckedBackgroundColor" Color="#FF939393" />
         <Style x:Key="SwitchCheckBox" TargetType="{x:Type CheckBox}">
             <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="FontSize" Value="13" />
             <Setter Property="Foreground" Value="#C2C2C2" />
             <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" />
             <Setter Property="Template">
